--- a/server/views/barcode.ejs
+++ b/server/views/barcode.ejs
@@ -61,7 +61,7 @@
                  <%}%>
 
 <% if (data.CompanyID == 64 && data.CompanyID != 20 && data.CompanyID != 19){%> 
-                <table style="margin-left: -10px; margin-top: -9px; zoom:95%;">
+                <table style="margin-left: -15px; margin-top: -9px; ">
                         <tr>
                             <th  style="width: 280px; padding: 0;">
                                 <div
@@ -79,7 +79,7 @@
                                     </script>
                                 </div>
                             </th>
-                            <th  style="width:550px;  padding: 0 !important; margin: 0 !important;zoom:95%; ">
+                            <th  style="width:550px;  padding: 0 !important; margin: 0 !important; ">
                                 <div
                                     style="text-align: left; margin-left: 150px;">
                                            <b style="font-size: 18px; font-weight: 600; font-family: verdana; letter-spacing: 0px;">    MRP  <%=i.RetailPrice%> </b>   
