--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -105,7 +105,7 @@
                                                             <thead>
                                                                 <tr>
                                                                     <td>{{option.Title}} {{option.Name | uppercase}}</td>
-                                                                    <td style="text-align: right;"> {{option.MobileNo1}}</td>
+                                                                    <td style="text-align: right;"> {{option.MatchedMobile}}</td>
                                                                 </tr>
                                                             </thead>
                                                         </table>
