--- a/server/views/invoice.ejs
+++ b/server/views/invoice.ejs
@@ -407,7 +407,7 @@
                                  <b <% %> style="color: red; font-size:<%= data.NoteFont %>">Note -</b>   Composition Taxable person, Not eligible to collect tax on supplies.
                                 </p>
                              <%}%>
-                             <h4 <% %> style="color: <%= data.Color %>;padding: 0; margin:0; padding-top:10px;">Timing:- <%= data.shopdetails.ShopTiming %>  </h4> 
+                             <h4 <% %> style="color: <%= data.Color %>;padding: 0; margin:0; padding-top:10px;"> <%= data.shopdetails.ShopTiming %>  </h4> 
                     </div>
                     <div class="col2">
                         <ul class="ul1" <% %> style="font-size:<%= data.CustomerFont %> ; line-height:<%=
