--- a/web1/src/app/inventory/transfer-list/transfer-list.component.html
+++ b/web1/src/app/inventory/transfer-list/transfer-list.component.html
@@ -8,9 +8,9 @@
                 <div  class="row mb-5">
                   <div class="col-xl-1 col-lg-2 col-md-2 col-5 p-0 ms-3">
                     <h2>Transfer
-                      <button class="bg-none" >
+                      <!-- <button class="bg-none" >
                         <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"></i>
-                      </button>
+                      </button> -->
                     </h2>
                   </div>
                   <div class="col-md-1 col-3 ps-md-0 ps-3 order-1 order-md-1">
