--- a/web1/src/app/inventory/transfer-product-invoice/transfer-product-invoice.component.css
+++ b/web1/src/app/inventory/transfer-product-invoice/transfer-product-invoice.component.css
@@ -56,3 +56,16 @@
   color: #fff;
   box-shadow: 1px 1px 10px #0003;
 }
+
+.bg-none{
+  background-color: rgba(0, 0, 0, 0);
+  border: none;
+  padding: 0;
+  height: 35px;
+}
+.bg-btn{
+background: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+}
